[gd_scene load_steps=5 format=3 uid="uid://dycjk5kh2idnl"]

[ext_resource type="Script" path="res://tutorial/tutorial.gd" id="1_jh5pj"]
[ext_resource type="Texture2D" uid="uid://3k3dyb7tst31" path="res://tutorial/add_squads.png" id="2_3vb8f"]
[ext_resource type="Texture2D" uid="uid://c5xohvvu7rso6" path="res://tutorial/move_squad_tile.png" id="3_17ooj"]
[ext_resource type="Theme" uid="uid://c4511mdsphtiy" path="res://ui/main_theme.tres" id="3_gwu1b"]

[node name="tutorial_menu" type="PanelContainer"]
custom_minimum_size = Vector2(0, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -72.5
offset_right = 99.0
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jh5pj")
tutorial_list = Array[Texture]([ExtResource("2_3vb8f"), ExtResource("3_17ooj"), null, null, null, null, null, null, null])

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="v_box_container" type="VBoxContainer" parent="margin_container"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="texture_rect" type="TextureRect" parent="margin_container/v_box_container"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_3vb8f")
expand_mode = 3

[node name="h_box_container" type="HBoxContainer" parent="margin_container/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="previous" type="Button" parent="margin_container/v_box_container/h_box_container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_gwu1b")
action_mode = 0
text = "Previous"

[node name="next" type="Button" parent="margin_container/v_box_container/h_box_container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_gwu1b")
action_mode = 0
text = "Next"

[connection signal="pressed" from="margin_container/v_box_container/h_box_container/previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="margin_container/v_box_container/h_box_container/next" to="." method="_on_next_pressed"]
